# Apollo_speed_planner

./: .gitignore  CMakeLists.txt  package.xml
include/: PiecewiseJerkProblem.cpp  PiecewiseJerkSpeedOptimizer.cpp  PiecewiseJerkSpeedOptimizer.hpp  PiecewiseJerkSpeedProblem.cpp
src/: ConstantJerkTrajectory1d.cpp  PiecewiseJerkSpeedOptimizer.cpp  demo.cpp
